<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseCompoundDrawables"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/alertnofav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/alert_no_favorites" />

    <ScrollView
        android:id="@+id/mainscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/ambientcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_ambiental_tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/ambient_tools"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/compass"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/compassicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/compass"
                            app:srcCompat="@drawable/compass" />

                        <TextView
                            android:id="@+id/compasstv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:gravity="center|start"
                            android:text="@string/compass"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/soundintensity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/soundintensityicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/sound_intensity"
                            app:srcCompat="@drawable/sound" />

                        <TextView
                            android:id="@+id/soundintensitytv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/sound_intensity"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pressure"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/pressureicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/pressure"
                            app:srcCompat="@drawable/barometor" />

                        <TextView
                            android:id="@+id/pressuretv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/pressure"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lightintensity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/light_intensity_icon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/light"
                            app:srcCompat="@drawable/light" />

                        <TextView
                            android:id="@+id/lightintensitytv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/light"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/devicetemperature"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/thermometer_icon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/temperature"
                            app:srcCompat="@drawable/thermometer" />

                        <TextView
                            android:id="@+id/devicetemperaturetv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/temperature"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/magneticfield"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/magneticfieldicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/magneticfield"
                            app:srcCompat="@drawable/magnetic_fild" />

                        <TextView
                            android:id="@+id/magneticfieldtv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/magneticfield"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/locationcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_position_tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/position_tools"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/altitude"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/altitudeicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/altitude"
                            app:srcCompat="@drawable/altitude" />

                        <TextView
                            android:id="@+id/altitudetv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/altitude"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gpscoords"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/gpscoordsicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/gps"
                            app:srcCompat="@drawable/gps" />

                        <TextView
                            android:id="@+id/gpscoordstv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/gps_coordinates"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/spiritlevel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/spiritlevelicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/level"
                            app:srcCompat="@drawable/level" />

                        <TextView
                            android:id="@+id/spiritleveltv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="@string/level"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/proximity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/proximityicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/distance"
                            app:srcCompat="@drawable/proxyimity" />

                        <TextView
                            android:id="@+id/proximitytv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/distance"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/motioncard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_movement_tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/movement_tools"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/gravity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/gravityicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/gravity"
                            app:srcCompat="@drawable/gravity" />

                        <TextView
                            android:id="@+id/gravitytv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/gravity"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/deviceacceleration"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/deviceaccelicon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/acceleration"
                            app:srcCompat="@drawable/accelerometer" />

                        <TextView
                            android:id="@+id/deviceaccelerationtv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/acceleration"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/speed"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/speedometericon"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/speed"
                            app:srcCompat="@drawable/speedometer" />

                        <TextView
                            android:id="@+id/speedtv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:text="@string/speed"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>