<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".location_tools.MapActivity"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >


        <GridLayout
            android:id="@+id/horiz_botton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="20dp"
            android:rowCount="1"
            android:textAlignment="center"
            android:weightSum="2">

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"

                android:background="@drawable/historical"
                android:maxLines="2"
                android:padding="14dp"
                android:text="@string/save_measure"
                android:textAlignment="center"
                android:textColor="@android:color/black">

            </Button>

            <Button
                android:id="@+id/history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"

                android:background="@drawable/historical"
                android:maxLines="2"
                android:padding="14dp"
                android:text="@string/historical_measure"

                android:textAlignment="center"
                android:textColor="@android:color/black">

            </Button>

        </GridLayout>

        <Button
            android:id="@+id/add_fav"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/historical"
            android:text="@string/add_favour" />

    </LinearLayout>

</RelativeLayout>